[package]
name = "diffhorror"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strsim = "0.10.0"
serde_json = "1.0.82"
serde = { version = "1.0.138", features = ["derive"] }
alphabet = "0.2.2"
clap = { version = "4.0.9", features = ["derive"] }
log = "0.4"
simplelog = "0.12.0"
colored = "2.0.0"


[dev-dependencies]
rand = { version = "0.8.5" }
